liblua-cqueues (20150112-0) unstable; urgency=low

  * Rename undocumented socket.fdopen to socket.dup, and add socket.fdopen
    which takes ownership of the specified descriptor number.
  * Use F_DUPFD_CLOEXEC in socket.dup if available.
  * Use SOCK_CLOEXEC with socket(2) and socketpair(2) if available.

 -- William Ahern <william@25thandClement.com>  Mon, 12 Jan 2015 15:03:41 -0800

liblua-cqueues (20141021-0) unstable; urgency=low

  * Add IPV6_V6ONLY support.

 -- William Ahern <william@25thandClement.com>  Tue, 21 Oct 2014 15:45:51 -0700

liblua-cqueues (20141020-0) unstable; urgency=low

  * Allow :events methods to return event set as integer bitset.
  * Fix NULL-dereference when calling :connect method on a socket created
    using socket.pair or socket.fdopen.
  * Fix cqueues.poll when polling outside of a managed coroutine.

 -- William Ahern <william@25thandClement.com>  Mon, 20 Oct 2014 17:17:59 -0700

liblua-cqueues (20140930-0) unstable; urgency=low

  * Fix build dependency where M4 fails but the command line still creates
    the target. On subsequent invocations make thinks the target is
    satisfied.
  * Handle numeric hosts differently so that socket.listen doesn't try
    to build a resolver. On OS X when the network is not connected
    /etc/resolv.conf doesn't exist, so building a resolver results in an
    ENOENT error. This prevented listening on the loopback, 0.0.0.0, or ::1
    when the network was disconnected.

 -- William Ahern <william@25thandClement.com>  Tue, 30 Sep 2014 17:56:31 -0700

liblua-cqueues (20140923-0) unstable; urgency=low

  * Add TLS Socket Name Indiciation (SNI) support.

 -- William Ahern <william@25thandClement.com>  Tue, 23 Sep 2014 16:08:59 -0700

liblua-cqueues (20140916-0) unstable; urgency=low

  * Fix out-of-bounds write when reading inotify events, reported by Timo Teräs.

 -- William Ahern <william@25thandClement.com>  Tue, 16 Sep 2014 15:18:16 -0700

liblua-cqueues (20140729-0) unstable; urgency=low
